--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+
 .tabela__total {
     border: 1px solid black;
     width: 90vw;
@@ -5,6 +7,10 @@
     margin-top: 1px;
     font-size: 1.5em;
 } 
+
+body {
+    font-family: 'Poppins';
+}
 
 .header__acima {
     background-color: rgb(141, 141, 141);
@@ -20,7 +26,7 @@ td {
 }
 
 .grafico-imagem {
-    width: 300px;
+    width: 80vw;
     margin: auto;
     display: flex;
     margin-top: 3em;
@@ -33,4 +39,14 @@ h1 {
 
 .tete {
     padding: 1px;
+}
+
+
+.descendencia {
+    width: 90vw;
+}
+
+p {
+    width: 87vw;
+    margin: auto;
 }
